Add register and auth JWT token in services
